Java 25 #11520